Replaces deprecated APIs